--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .photo {
-    margin:           auto;
+    margin-left:      auto;
+    margin-right:     auto;
     box-shadow:       0 1px 2px rgba(0,0,0,.2);
     border-radius:    3px;
     background-color: #fff;
